--- a/task04/pom.xml
+++ b/task04/pom.xml
@@ -19,40 +19,36 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-core</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-        <!--Syndicate annotations-->
-        <dependency>
-            <groupId>net.sf.aws-syndicate</groupId>
-            <artifactId>deployment-configuration-annotations</artifactId>
-            <version>${syndicate.java.plugin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>software.amazon.awssdk</groupId>
-            <artifactId>sqs</artifactId>
-            <version>2.20.25</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.30</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-events</artifactId>
-            <version>3.11.4</version>
-            <scope>compile</scope>
-        </dependency>
+<!-- AWS dependencies-->
+<dependency>
+<groupId>com.amazonaws</groupId>
+<artifactId>aws-lambda-java-core</artifactId>
+<version>1.2.0</version>
+</dependency>
+<dependency>
+<groupId>com.amazonaws</groupId>
+<artifactId>aws-lambda-java-events</artifactId>
+<version>3.11.0</version>
+</dependency>
+<dependency>
+<groupId>com.amazonaws</groupId>
+<artifactId>aws-lambda-java-log4j2</artifactId>
+<version>1.5.0</version>
+</dependency>
+<!--Syndicate annotations-->
+<dependency>
+<groupId>net.sf.aws-syndicate</groupId>
+<artifactId>deployment-configuration-annotations</artifactId>
+<version>${syndicate.java.plugin.version}</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+<dependency>
+<groupId>org.slf4j</groupId>
+<artifactId>slf4j-api</artifactId>
+<version>2.0.13</version>
+</dependency>
+ 
     </dependencies>
-
     <build>
         <sourceDirectory>${src.dir}</sourceDirectory>
         <resources>
