--- a/task07/pom.xml
+++ b/task07/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.12.96</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
