--- a/task08/pom.xml
+++ b/task08/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
 
         <dependency>
-            <groupId>task08</groupId>
+            <groupId>com.task08</groupId>
             <artifactId>weather-forecast</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
